[gd_scene load_steps=8 format=3 uid="uid://doi8fr7k3rvb2"]

[ext_resource type="Script" path="res://scenes/backgroundScenes/next_level_platform.gd" id="1_j0q4a"]
[ext_resource type="Texture2D" uid="uid://co8paigggvwfh" path="res://assets/background/fourSeasonsPlatformer_ [tileset, version 2.0]/fourSeasonsPlatformer_ [tileset, version 2.0]/background_/terrain_.png" id="1_koent"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0x5bv"]
size = Vector2(78, 14)

[sub_resource type="Animation" id="Animation_g15dt"]
resource_name = "vertical"
length = 5.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 5.01),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -200), Vector2(0, -400), Vector2(0, -600), Vector2(0, -800), Vector2(0, -1000), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fvgjp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_26i8t"]
_data = {
"RESET": SubResource("Animation_fvgjp"),
"vertical": SubResource("Animation_g15dt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h58un"]
size = Vector2(62, 8)

[node name="next_level_platform" type="Node2D"]
script = ExtResource("1_j0q4a")

[node name="Platform" type="AnimatableBody2D" parent="."]
collision_mask = 6

[node name="Sprite2D" type="Sprite2D" parent="Platform"]
position = Vector2(0, -4.76837e-07)
scale = Vector2(1.625, 1.5)
texture = ExtResource("1_koent")
region_enabled = true
region_rect = Rect2(0, 167, 48, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource("RectangleShape2D_0x5bv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform"]
libraries = {
"": SubResource("AnimationLibrary_26i8t")
}

[node name="Area2D" type="Area2D" parent="Platform"]
collision_mask = 2

[node name="activate" type="CollisionShape2D" parent="Platform/Area2D"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_h58un")

[node name="countdown" type="Timer" parent="Platform"]
one_shot = true

[connection signal="body_entered" from="Platform/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Platform/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Platform/countdown" to="." method="_on_countdown_timeout"]
